--- a/src/app/main/unit/detail-unit/detail-unit.component.html
+++ b/src/app/main/unit/detail-unit/detail-unit.component.html
@@ -3,11 +3,23 @@
     <h3 class="label-header">{{ this.data.title | translate }}</h3>
   </div>
   <div class="content">
-    <div class="row">
-      <div class="col-md-6">
+
+     <!--Hàng 0-->
+     <div class="row">
+      <div class="col-md-12">
         <div class="label_item">{{ "unit.name" | translate }}</div>
         <div>
           <div [innerHTML]="name" class="input_text"></div>
+        </div>
+      </div>
+    </div>
+
+    <!--Hàng 1-->
+    <div class="row">
+      <div class="col-md-6">
+        <div class="label_item">{{ "unit.id" | translate }}</div>
+        <div>
+          <div [innerHTML]="id" class="input_text"></div>
         </div>
       </div>
 
@@ -19,6 +31,7 @@
       </div>
     </div>
 
+    <!--Hàng 2-->
     <div class="row" style="padding-top: 10px">
       <div class="col-md-6">
         <div class="label_item">{{ "unit.code" | translate }}</div>
