sua giao dien button xem lý do tu choi hop dong

--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.scss
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.scss
@@ -1,3 +1,11 @@
 .img_icon:hover{
     cursor: pointer;
 }
+
+.button{
+    background-color: #1487E1;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 3px 10px;
+}
