--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -22,12 +22,12 @@
                     <span style="color: dimgray" *ngIf="d.typeOfSign">Loại ký: {{d.typeOfSign.name ? d.typeOfSign.name : ''}}</span>
                 </div>
                 <div class="col-md-5" style="display: flex; flex-direction: column;text-align: center">
-                    <div style="display: flex; justify-content: center;">
+                    <div style="display: flex; justify-content: center;align-items: center;">
                         <span [style.color]="d.status === 'Đã từ chối' ? '#d11919' : d.status !== 0 ? '#106DB6' : '#545252'">{{d.status}}</span> &nbsp;
-                        <div class="div_icon" style="width: 90px;"  *ngIf="d.status == 'Đã từ chối'" >
-                            <a class="img_icon" ngbTooltip="Lý do từ chối hợp đồng" (click)="viewReasonRejected(d.id)">( Xem lý do )</a>
+                        <div class="div_icon " style="width: 90px;display: flex;margin-left:10px"  *ngIf="d.status == 'Đã từ chối'" >
+                            <div class="img_icon button" ngbTooltip="Lý do từ chối hợp đồng" (click)="viewReasonRejected(d.id)">Xem lý do</div>
                         </div>
-                    </div>
+                    </div> 
                     <span style="color: #8B8B8B" *ngIf="d.process_at">({{d.process_at}})</span>
                 </div>
             </div>
