--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -59,7 +59,7 @@
         <div class="label_item">{{'contract.type' | translate}}</div>
         <div>
           <p-dropdown panelStyleClass="font" [options]="typeList" [(ngModel)]="type_id" optionLabel="name"
-            optionValue="id" placeholder="Chọn loại hợp đồng" [filter]="true" filterBy="name" [showClear]="true">
+            optionValue="id" placeholder="{{'choose.contract.type' | translate}}" [filter]="true" filterBy="name" [showClear]="true">
           </p-dropdown>
         </div>
       </div>
@@ -71,20 +71,8 @@
       <div class="form-group">
         <div class="label_item">{{'contract.connect' | translate}}</div>
         <div>
-          <!-- <ng-multiselect-dropdown id="contractConnect" [(ngModel)]="contractConnect" placeholder="{{'choose' | translate }}"
-            [settings]="dropdownConnectSettings" [data]="contractConnectList">
-            <ng-template #optionsTemplate let-item let-option="option"
-              let-id="id" let-isSelected="isSelected">
-              <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
-                <label style="color: #333; font-weight: normal;"
-                  [ngStyle]="{ 'font-weight': isSelected? 'bold':' normal','color': getContractConnectItems[id].isDisabled? 'lightgrey': ''}">
-                  {{getContractConnectItems[id].name}}
-                </label>
-              </div>
-            </ng-template>
-          </ng-multiselect-dropdown> -->
           <p-multiSelect styleClass="font" [options]="contractConnectList" [(ngModel)]="contractConnect"
-            optionLabel="name" optionValue="id" display="chip" placeholder="Chọn hợp đồng"></p-multiSelect>
+            optionLabel="name" optionValue="id" display="chip" placeholder="{{'choose.contract' | translate}}"></p-multiSelect>
         </div>
       </div>
     </div>
@@ -141,7 +129,7 @@
   <div class="row">
     <div class="col-md-5">
       <div class="form-group">
-        <div class="label_item">{{'Ngày hết hiệu lực hợp đồng' | translate}}</div>
+        <div class="label_item">{{'expire.date.contract' | translate}}</div>
         <div>
           <p-calendar [(ngModel)]="expire_time" [minDate]="minDate" [showIcon]="true" [readonlyInput]="true"
             dateFormat="dd/mm/yy"></p-calendar>
@@ -159,5 +147,5 @@
 </div>
 
 <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
-  <p style="font-size: 18px; color: white">Đang xử lý...</p>
+  <p style="font-size: 18px; color: white">{{'sys.processing'| translate}}...</p>
 </ngx-spinner>
